maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: too many arguments for method murNord: ()Boolean
    if(murNord( && getDirection()==Direction.NORTH ))
              ^